unpackaged/objects/wb_ReceivableServiceFee__c.object
<CustomObject>
    <description>WellBe Receivable</description>
    <fields>
        <fullName>CarInsurance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>自動車関連保険契約</label>
        <referenceTo>wb_CarInsurance__c</referenceTo>
        <relationshipLabel>売り上げ</relationshipLabel>
        <relationshipName>CI_Receivable</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CarInsurancedCar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>対象車</label>
        <referenceTo>wb_CarInsurancedCars__c</referenceTo>
        <relationshipLabel>売り上げ</relationshipLabel>
        <relationshipName>InsuracedCarReceivable</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>区分</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>国</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>通貨</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>作成日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>地区</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoicingCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>請求先会社</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>売り上げ</relationshipLabel>
        <relationshipName>AccountReceivable</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会員契約</label>
        <referenceTo>wb_Membership__c</referenceTo>
        <relationshipLabel>売り上げ</relationshipLabel>
        <relationshipName>MembershipReceivable</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>メモ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OptionAmount__c</fullName>
        <label>OP商品費用</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OptionCommission__c</fullName>
        <label>OP手数料</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OptionName__c</fullName>
        <label>OP商品名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAmount__c</fullName>
        <label>主商品費用</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceCommission__c</fullName>
        <label>主商品手数料</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceName__c</fullName>
        <label>主商品名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>サービス</label>
        <referenceTo>wb_Service__c</referenceTo>
        <relationshipLabel>売り上げ</relationshipLabel>
        <relationshipName>ServiceReceivable</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <label>総金額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_RegistryNumber__c</fullName>
        <formula>CarInsurancedCar__r.RegistryNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>登録番号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_Service__c</fullName>
        <formula>ServiceName__c + &apos; &apos; + OptionName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>商品</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>売り上げ</label>
        <referenceTo>wb_ReceivableServiceFee__c</referenceTo>
        <relationshipLabel>子売り上げ</relationshipLabel>
        <relationshipName>ChildRecord</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>売り上げ</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>売上番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>